.gitmodules, deps/dss: add solidity source as dependency

--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,7 @@
     path = deps/k
     url = https://github.com/kframework/k
     ignore = untracked
+[submodule "deps/dss"]
+	path = deps/dss
+	url = https://github.com/makerdao/dss
+	ignore = untracked
