--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,7 @@
     path = deps/dss
     url = https://github.com/makerdao/dss
     ignore = untracked
+[submodule "tests/mkr-mcd-spec-sort-tests"]
+    path = tests/mkr-mcd-spec-sort-tests
+    url = https://github.com/makerdao/mkr-mcd-spec-sol-tests.git
+    ignore = untracked
