.gitmodules, tests/mkr-mcd-spec-sol-tests: add submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,6 +7,10 @@
     url = https://github.com/kframework/k
     ignore = untracked
 [submodule "deps/dss"]
-	path = deps/dss
-	url = https://github.com/makerdao/dss
-	ignore = untracked
+    path = deps/dss
+    url = https://github.com/makerdao/dss
+    ignore = untracked
+[submodule "tests/mkr-mcd-spec-sol-tests"]
+    path = tests/mkr-mcd-spec-sol-tests
+    url = https://github.com/makerdao/mkr-mcd-spec-sol-tests.git
+    ignore = untracked
