Absorb testing submodule (#200)
* .gitmodules, tests/mkr-mcd-spec-sol-tests: remove submodule

* tests/solidity-test: testing harness for solidity code generation

* tests/solidity-test: add back ds-test and dss-deploy submodules

* Makefile: update path for soliidyt test generation

* .gitignore, tests/solidity-test: ignore generated files

* tests/solidity-test/src/Test.t.sol: remove example file

* tests/solidity-test: remove empty file

* Makefile: make sure output directory exists

* mcd-pyk.py: correct path to test harness

* Makefile: tests passing now

* Jenkinsfile: adjust parallelism of tests

* Jenkinsfile: put separate timeout on Test phase

* Jenkinsfile: tighten timeout

--- a/.gitmodules
+++ b/.gitmodules
@@ -6,7 +6,11 @@
     path = deps/dss
     url = https://github.com/makerdao/dss
     ignore = untracked
-[submodule "tests/mkr-mcd-spec-sol-tests"]
-    path = tests/mkr-mcd-spec-sol-tests
-    url = https://github.com/makerdao/mkr-mcd-spec-sol-tests.git
+[submodule "tests/solidity-test/lib/ds-test"]
+	path = tests/solidity-test/lib/ds-test
+	url = https://github.com/dapphub/ds-test
+    ignore = untracked
+[submodule "tests/solidity-test/lib/dss-deploy"]
+	path = tests/solidity-test/lib/dss-deploy
+	url = https://github.com/makerdao/dss-deploy
     ignore = untracked
