--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,3 @@
-[submodule "deps/k"]
-    path = deps/k
-    url = https://github.com/kframework/k
-    ignore = untracked
 [submodule "deps/dss"]
     path = deps/dss
     url = https://github.com/makerdao/dss
@@ -10,3 +6,7 @@
 	path = tests/solidity-test/lib/dss-deploy
 	url = https://github.com/makerdao/dss-deploy
     ignore = untracked
+[submodule "deps/evm-semantics"]
+	path = deps/evm-semantics
+	url = https://github.com/kframework/evm-semantics
+	ignore = untracked
